--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -25,8 +25,7 @@
                     <div id="nav-buttons">
                         <a class="button">HOME</a>
                         <a class="button">ARCHIVE</a>
-                        <a class="button">CONTACT</a>
-                    </div>
+                        <a class="button">CONTACT</a> </div>
                 </div>
                 <svg class="top-cover" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 1903 556">
                     <path class="svg-banner-shape" d="M0, 300 L1905,120 V 556 H 0 V 300z"></path>
@@ -34,131 +33,26 @@
             </div>
             <div id="mid">
                 <div id="mid-content" class="container-fluid">
-                    <div class="block" style="">
-                        <div class="block-date">
-                            <a class="day">3</a>
-                            <a class="month">jul</a>
-                            <div class="date-color-bar"></div>
+                    <div class='block' id = "b0">
+                        <div class='block-date'>
+                            <a class='day'></a>
+                            <a class='month'></a>
+                            <div class='date-color-bar'></div>
                         </div>
-                        <a class="block-title">这是一个测试标题</a>
-                        <div class="block-description">
-                            <a class="tag">#随笔</a>
-                            <a class="comment-number">0 Comment</a>
+                        <a class='block-title'></a>
+                        <div class='block-description'>
+                            <img src='../static/image/icon_pzwbp8ih82p/tag.svg' class='description-icon tag-icon' />
+                            <div class='tag'></div>
+                            <img src='../static/image/icon_pzwbp8ih82p/comment.svg'
+                                class='description-icon comment-icon' />
+                            <a class='comment-number'></a>
                         </div>
-                        <a class="block-summury">当我们获得了某个DOM节点，想在这个DOM节点内插入新的DOM，应该如何做？
-
-                            如果这个DOM节点是空的，例如，<div></div>，那么，直接使用innerHTML =
-                            '<span>child</span>'就可以修改DOM节点的内容，相当于“插入”了新的DOM节点。
-
-                            如果这个DOM节点不是空的，那就不能这么做，因为innerHTML会直接替换掉原来的所有子节点。
-
-                            有两个办法可以插入新的节点。一个是使用appendChild，把一个子节点添加到父节点的最后一个子节点。例如：</a>
+                        <a class='block-summury'></a>
                     </div>
-                    <div class="block" style="">
-                        <div class="block-date">
-                            <a class="day">3</a>
-                            <a class="month">jul</a>
-                            <div class="date-color-bar"></div>
-                        </div>
-                        <a class="block-title">这是一个很长很长的测试标题 - 这是一个副标题 </a>
-                        <div class="block-description">
-                            <a class="tag">#随笔</a>
-                            <a class="comment-number">0 Comment</a>
-                        </div>
-                        <a class="block-summury">Apr 29, 2016 - 还好，我们已经有了Google和Adobe制作的思源黑体提供了7个字重，苹果在OS X 11及iOS
-                            9上推出的苹方提供了6个字重，足以应对绝大多数的 ...</a>
-                    </div>
-                    <div class="block" style="">
-                        <div class="block-date">
-                            <a class="day">3</a>
-                            <a class="month">jul</a>
-                            <div class="date-color-bar"></div>
-                        </div>
-                        <a class="block-title">这是一个测试标题</a>
-                        <div class="block-description">
-                            <a class="tag">#随笔</a>
-                            <a class="comment-number">0 Comment</a>
-                        </div>
-                        <a class="block-summury">Nov 18, 2015 - 随着El Capitan 和iOS9 发布而内置新系统中的苹方字体 给我们在中文字体的使用上带来了新的选择。
-                            在Web 上定义字体为苹方的方法：.</a>
-                    </div>
-                    <div class="block" style="">
-                        <div class="block-date">
-                            <a class="day">3</a>
-                            <a class="month">jul</a>
-                            <div class="date-color-bar"></div>
-                        </div>
-                        <a class="block-title">这是一个测试标题</a>
-                        <div class="block-description">
-                            <a class="tag">#随笔</a>
-                            <a class="comment-number">0 Comment</a>
-                        </div>
-                        <a class="block-summury"></a>
-                    </div>
-                    <div class="block" style="">
-                        <div class="block-date">
-                            <a class="day">3</a>
-                            <a class="month">jul</a>
-                            <div class="date-color-bar"></div>
-                        </div>
-                        <a class="block-title">这是一个测试标题</a>
-                        <div class="block-description">
-                            <a class="tag">#随笔</a>
-                            <a class="comment-number">0 Comment</a>
-                        </div>
-                        <a class="block-summury">当我们获得了某个DOM节点，想在这个DOM节点内插入新的DOM，应该如何做？
-
-                            如果这个DOM节点是空的，例如，<div></div>，那么，直接使用innerHTML =
-                            '<span>child</span>'就可以修改DOM节点的内容，相当于“插入”了新的DOM节点。
-
-                            如果这个DOM节点不是空的，那就不能这么做，因为innerHTML会直接替换掉原来的所有子节点。
-
-                            有两个办法可以插入新的节点。一个是使用appendChild，把一个子节点添加到父节点的最后一个子节点。例如：</a>
-                    </div>
-                    <div class="block" style="">
-                        <div class="block-date">
-                            <a class="day">3</a>
-                            <a class="month">jul</a>
-                            <div class="date-color-bar"></div>
-                        </div>
-                        <a class="block-title">这是一个测试标题</a>
-                        <div class="block-description">
-                            <a class="tag">#随笔</a>
-                            <a class="comment-number">0 Comment</a>
-                        </div>
-                        <a class="block-summury">当我们获得了某个DOM节点，想在这个DOM节点内插入新的DOM，应该如何做？
-
-                            如果这个DOM节点是空的，例如，<div></div>，那么，直接使用innerHTML =
-                            '<span>child</span>'就可以修改DOM节点的内容，相当于“插入”了新的DOM节点。
-
-                            如果这个DOM节点不是空的，那就不能这么做，因为innerHTML会直接替换掉原来的所有子节点。
-
-                            有两个办法可以插入新的节点。一个是使用appendChild，把一个子节点添加到父节点的最后一个子节点。例如：</a>
-                    </div>
-                    <div class="block" style="">
-                        <div class="block-date">
-                            <a class="day">3</a>
-                            <a class="month">jul</a>
-                            <div class="date-color-bar"></div>
-                        </div>
-                        <a class="block-title">这是一个测试标题</a>
-                        <div class="block-description">
-                            <a class="tag">#随笔</a>
-                            <a class="comment-number">0 Comment</a>
-                        </div>
-                        <a class="block-summury">当我们获得了某个DOM节点，想在这个DOM节点内插入新的DOM，应该如何做？
-
-                            如果这个DOM节点是空的，例如，<div></div>，那么，直接使用innerHTML =
-                            '<span>child</span>'就可以修改DOM节点的内容，相当于“插入”了新的DOM节点。
-
-                            如果这个DOM节点不是空的，那就不能这么做，因为innerHTML会直接替换掉原来的所有子节点。
-
-                            有两个办法可以插入新的节点。一个是使用appendChild，把一个子节点添加到父节点的最后一个子节点。例如：</a>
-                    </div>
-
                 </div>
                 <div id="float-window" class="info-window">
-                    <svg alt = "Don't know what to put here yet" viewBox="0 0 120 120" id="avator-pic" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                    <svg alt="Don't know what to put here yet" viewBox="0 0 120 120" id="avator-pic" version="1.1"
+                        xmlns="http://www.w3.org/2000/svg">
                         <defs>
                             <linearGradient id="Gradient1" x1=10% y1=90% x2=90% y2=10%>
                                 <stop offset="0%" stop-color="#fb406c" />
