--- a/main/static/css/default.css
+++ b/main/static/css/default.css
@@ -87,6 +87,7 @@ text {
     align-items: center;
     height: 150px;
     max-width: 1200px;
+    padding-left: 55px;
 }
 
 #page-title {
@@ -125,9 +126,9 @@ text {
     max-width: 880px;
     box-sizing: border-box;
     flex-grow: 1;
-    margin-right: 300px;
+    margin-right: 327px;
     display: flex;
-    justify-content: left;
+    justify-content: center;
     padding: 0 15px;
     height: 100vh;
 }
@@ -154,7 +155,7 @@ text {
 }
 
 #name {
-    <font-size: 10;
+    font-size: 10;
     font-weight: 100;
     line-height: 24px;
     margin-bottom: 0;
@@ -221,10 +222,11 @@ text {
     
 }
 .block {
+    float: right;
     margin-bottom: 15px;
     box-sizing: content-box;
-    width: 390px;
-    min-height: 110px;
+    width: 44%;
+    min-width: 345px;
     background: white;
     box-shadow: 0 1px 5px rgba(26,26,26,.1);
     transition: all 350ms cubic-bezier(0, 0, 0.38, 1.04) 0s;
@@ -237,7 +239,7 @@ text {
 }
 
 .block:hover {
-    transform: scaleX(1.03) scaleY(1.03) translateY(-3px);
+    transform: scaleX(1.02) scaleY(1.02) translateY(-3px);
     box-shadow: 0 1px 20px rgba(26,26,26,.15);
     z-index: 102;
 }
@@ -290,6 +292,7 @@ text {
 }
 
 .block-title{
+    font-size: 18px;
     display: block;
     height: 80px;
     width: 100%;
@@ -317,7 +320,7 @@ text {
     margin-right: 4px;
 }
 
-.tag {
+.tag .view{
     display: flex;
     align-items: center;
     margin-right: 4px;
@@ -327,16 +330,30 @@ text {
     height: 13px;
 }
 
+.view-icon {
+    height: 16px;
+}
+
 .comment-icon {
     height: 15px;
 }
 
 .block-summury{
-    display: block;
+    display: flex;
+    flex-direction: column;
     flex-grow: 1;
     width: 100%;
     box-sizing: border-box;
     margin-top: 20px;
-    padding: 0 10px 10px 10px;
+    color: #333;
+    padding: 0 5px 5px 5px;
+}
+
+.block-summury img {
+    max-width: 100%;
+}
+
+.block-summury a {
+    margin: 5px 0;
     color: #333;
 }
