--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="https://use.typekit.net/wnd0asw.css">
         <link rel="stylesheet" href="../static/css/default.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
         <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
         <script src="../static/js/default.js"></script>
         <title>Home</title>
@@ -33,7 +34,7 @@
             </div>
             <div id="mid">
                 <div id="mid-content" class="container-fluid">
-                    <div class='block' id = "b0">
+                    <div class='block' id = "" style="display: none">
                         <div class='block-date'>
                             <a class='day'></a>
                             <a class='month'></a>
@@ -41,13 +42,16 @@
                         </div>
                         <a class='block-title'></a>
                         <div class='block-description'>
-                            <img src='../static/image/icon_pzwbp8ih82p/tag.svg' class='description-icon tag-icon' />
+                            <img src='../static/image/tag.svg' class='description-icon tag-icon' />
                             <div class='tag'></div>
-                            <img src='../static/image/icon_pzwbp8ih82p/comment.svg'
+                            <img class = 'description-icon view-icon' src = '../static/image/view.svg'/>
+                            <a class = 'view'></a>
+                            <img src='../static/image/comment.svg'
                                 class='description-icon comment-icon' />
                             <a class='comment-number'></a>
                         </div>
-                        <a class='block-summury'></a>
+                        <a class='block-summury'>
+                        </a>
                     </div>
                 </div>
                 <div id="float-window" class="info-window">
