--- a/main/static/css/default.css
+++ b/main/static/css/default.css
@@ -43,6 +43,7 @@ text {
     content: " - ";
 }
 #cover-content{
+    overflow: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -351,6 +352,7 @@ text {
 
 .block-summury img {
     max-width: 100%;
+    margin: 20px 0
 }
 
 .block-summury a {
