--- a/main/static/css/default.css
+++ b/main/static/css/default.css
@@ -1,8 +1,7 @@
 @font-face {
-    font-family: pingfang;
-    src: url('../font/PingFang-SC-Light-2.otf') format('opentype')
+    font-family: 'Allura', cursive;
+    font-family: 'Sacramento', cursive;
 }
-
 html, body{
     margin: 0;
     padding: 0;
@@ -15,7 +14,7 @@ html, body{
 }
 
 a{
-    font-family: roboto, pingfang, sans-serif;
+    font-family: roboto, Helvetica,Arial,"Microsoft Yahei","Hiragino Sans GB","Heiti SC","WenQuanYi Micro Hei",sans-serif;
     font-weight: 300;
     font-style: normal;
 }
@@ -62,8 +61,9 @@ text {
 
 #content{
     opacity: 0;
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
     transition: opacity 500ms ease 0s;
     width: 100%;
     height: 100%;
@@ -88,13 +88,13 @@ text {
     align-items: center;
     height: 150px;
     max-width: 1200px;
-    padding-left: 55px;
+    padding: 0 55px;
 }
 
 #page-title {
     display: block;
     margin: 0 30px;
-    font-family: futura-pt, sans-serif;
+    font-family: 'futura-pt', sans-serif;
     font-weight: 300;
     font-style: normal;
     font-size: 30px;
@@ -116,67 +116,61 @@ text {
 #mid {
     position: absolute;
     top: 200px;
-    left:0;
-    right: 0;
     display: flex;
-    justify-content: center;
-    padding: 0 16px;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 100px;
+    max-width: 1200px;
+}
+
+#self {
+    width: 50vh;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 40px;
+}
+
+#hi {
+    font-family: 'Allura';
+    font-size: 250px;
+    color: #fff
+}
+
+#welcome {
+    font-size: 15px;
+    color: #eee
+}
+
+#img-cover {
+    width: 250px;
+    height: 250px;
+    overflow: hidden;
+    background-image: url('../image/avatar.jpg');
+    background-color: rgba(26,26,26,.15);
+    background-size: cover;
+    background-position: center center;
+    border-radius: 100%;
+    box-shadow: 1px 3px 7px rgba(26,26,26,.15);
+}
+
+#avatar {
+    height: 100%;
+	width: auto;
+	left:50%;
+	position: relative;
+	-webkit-transform: translateX(-50%);
+	-ms-transform: translateX(-50%);
+	-moz-transform: translateX(-50%);
 }
 
 #mid-content{
-    max-width: 880px;
     box-sizing: border-box;
-    flex-grow: 1;
-    margin-right: 327px;
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
     padding: 0 15px;
-    height: 100vh;
-}
-
-#float-window{
-    box-shadow: 0 1px 12px rgba(26,26,26,.1);    
-    background: #fff;
-    width: 270px;
-    min-height: 400px;
-    border: 1px solid #eee;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    
-}
-
-#cover-pic{
-    transition: all 350ms cubic-bezier(0, 0, 0.38, 1.04) 0s;
-}
-
-#avator-pic{
-    align-self: center;
-    width: 180px;
-}
-
-#name {
-    font-size: 10;
-    font-weight: 100;
-    line-height: 24px;
-    margin-bottom: 0;
-}
-
-#about-me {
-    font-size: 30px;
-    text-align: center;
-    line-height: 40px;
-    font-weight: 500;
-    color: #777;
-}
-
-.info-window{
-    position: absolute; 
-}
-
-.info-window-fixed{
-    position: fixed;
-    top: 100;
+    justify-content: center;
 }
 
 .cover{
@@ -223,26 +217,18 @@ text {
     
 }
 .block {
-    float: right;
-    margin-bottom: 15px;
+    position: relative;
     box-sizing: content-box;
-    width: 44%;
+    margin: 10px;
+    width: 542px;
     min-width: 345px;
     background: white;
     box-shadow: 0 1px 5px rgba(26,26,26,.1);
-    transition: all 350ms cubic-bezier(0, 0, 0.38, 1.04) 0s;
-    cursor: pointer;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     padding: 10px;
     border: 1px solid #eee;
-}
-
-.block:hover {
-    transform: scaleX(1.02) scaleY(1.02) translateY(-3px);
-    box-shadow: 0 1px 20px rgba(26,26,26,.15);
-    z-index: 102;
 }
 
 .block-date {
@@ -277,7 +263,7 @@ text {
 .month {
     border-top: 1px solid #ddd;
     height: 40px;
-    line-height: 40px;
+    line-height: 38px;
     letter-spacing: 2px;
     font-size: 10px;
     text-transform: uppercase;
@@ -294,12 +280,13 @@ text {
 
 .block-title{
     font-size: 18px;
+    font-weight:500;
     display: block;
-    height: 80px;
+    height: 105px;
     width: 100%;
-    padding: 5px 5px 0 95px;
+    padding: 10px 5px 10px 105px;
     box-sizing: border-box;
-
+    color: #162b40
 }
 
 .block-description {
@@ -312,7 +299,7 @@ text {
 }
 
 .block-description a{
-    font-size: 10;
+    font-size: 12;
     color: #aaa;
     margin-right: 5px;
 }
@@ -327,6 +314,12 @@ text {
     margin-right: 4px;
 }
 
+.tag a {
+    font-size: 12;
+    color: #aaa;
+    margin-right: 5px;
+}
+
 .tag-icon {
     height: 13px;
 }
@@ -339,23 +332,51 @@ text {
     height: 15px;
 }
 
-.block-summury{
+.block-summary{
     display: flex;
     flex-direction: column;
     flex-grow: 1;
     width: 100%;
     box-sizing: border-box;
-    margin-top: 20px;
     color: #333;
-    padding: 0 5px 5px 5px;
+    padding: 10px 20px 5px 20px;
+    max-height: 35vh;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
-.block-summury img {
+.block-summary img {
     max-width: 100%;
     margin: 20px 0
 }
 
-.block-summury a {
+.block-summary a {
     margin: 5px 0;
     color: #333;
+}
+
+.redirect-button{
+    align-self: flex-end;
+    box-sizing: border-box;
+    width: 100px;
+    height: 40px;
+    line-height: 38px;
+    display: block;
+    align-text: center;
+    border: 1px solid #ddd;
+    border-radius: 3px;
+    margin: 15px 15px;
+    transition: all 350ms cubic-bezier(0, 0, 0.38, 1.04) 0s;
+    cursor: pointer;
+    text-align: center;
+    font-family: roboto, sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    font-size: 12px;
+}
+
+.redirect-button:hover {
+    color: #fc5a67;
+    border: 1px solid #ff8560;
+    width: 140px;
 }
